--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,8 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
+    "react-markdown": "^10.1.0",
+    "remark-gfm": "^4.0.1",
     "styled-components": "^6.1.19",
     "uuid": "^13.0.0"
   },
