--- a/client/package.json
+++ b/client/package.json
@@ -11,11 +11,15 @@
   },
   "dependencies": {
     "axios": "^1.13.2",
+    "dayjs": "^1.11.19",
     "firebase": "^12.7.0",
+    "gsap": "^3.14.2",
+    "moment": "^2.30.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
+    "react-router-dom": "^7.11.0",
     "remark-gfm": "^4.0.1",
     "styled-components": "^6.1.19",
     "uuid": "^13.0.0"
