--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "firebase": "^12.7.0",
     "gsap": "^3.14.2",
     "moment": "^2.30.1",
+    "openai": "^6.15.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
