--- a/client/package.json
+++ b/client/package.json
@@ -23,7 +23,8 @@
     "react-router-dom": "^7.11.0",
     "remark-gfm": "^4.0.1",
     "styled-components": "^6.1.19",
-    "uuid": "^13.0.0"
+    "uuid": "^13.0.0",
+    "vite-plugin-pwa": "^1.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
